--- a/style.css
+++ b/style.css
@@ -10,13 +10,19 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
-    padding-left: 5%;
+    padding-left: 4%;
+    padding-right: 4%;
 }
 .half-width img{
     width: 90%;
+}
+.half-width p{
+    text-align: justify;
+    color: dimgray;
 }
 .hire-button{
     text-decoration: none;
@@ -31,4 +37,9 @@ section{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
