--- a/style.css
+++ b/style.css
@@ -8,14 +8,14 @@ h1{
 .orange-color{
     color: orange;
 }
-section{
+.flexible-content{
     display: flex;
     margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
-    padding-left: 4%;
-    padding-right: 4%;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 .half-width img{
     width: 90%;
@@ -42,4 +42,31 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-item{
+    box-shadow: 10px 10px 40px gray;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+#web-developer{
+    border-left: 7px solid;
+    border-image: linear-gradient(rgb(35, 219, 243), rgb(99, 7, 219));
+    border-image-slice: 1;
+}
+#master-developer{
+    border-left: 7px solid;
+    border-image: linear-gradient(rgb(221, 106, 106), yellow);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
